Prevent user role tags from wrapping in users page

--- a/app/assets/stylesheets/renalware/modules/_users.scss
+++ b/app/assets/stylesheets/renalware/modules/_users.scss
@@ -16,6 +16,7 @@
     margin: .1rem .3rem .2rem 0;
     border-radius: .3rem;
     background-color: $mid-grey;
+    white-space: nowrap;
 
     &.devops {
 
